--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  background-color: rgb(175, 173, 173);
+  height: 30vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  height: 40px;
+  width: 50%;
+  border: none;
+  border-radius: 8px;
+  outline: none;
+  padding-left: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+img {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 0.5em;
+  z-index: 1;
+}
+
+.grid-section {
+  width: 75%;
+  margin: 0 auto;
+  column-count: 3;
+  position: relative;
+}
+.grid {
+  border-radius: 30px;
+}
+
+.card {
+  position: relative;
+  height: 100%;
+  padding: 10px;
+  object-fit: cover;
+  max-width: 400px;
+}
+.card-image img {
+  width: 100%;
+  border-radius: 10px;
+}
+.card-overlay {
+  border-radius: 0 0 10px 10px;
+  position: absolute;
+  bottom: 20px;
+  width: 85%;
+  max-height: 30%;
+  color: #fff;
+  padding: 15px;
+  text-align: left;
+  /* background: #0000002a!important; */
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0) 100%);
+  transition: 0.5;
+  z-index: 3;
+}
+.card-overlay h2 {
+  margin: 0 !important;
+  padding: 0 !important;
+}
+@media (max-width: 800px) {
+  .grid-section {
+    column-count: 2;
   }
-  to {
-    transform: rotate(360deg);
+  img {
+    margin-bottom: 0.5em;
   }
+}
+
+/* modal styles*/
+
+.modal-box {
+  width: 60%;
+  bottom: 0;
+  margin: 15rem auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: 0;
+  opacity: 1;
+  pointer-events: auto;
+  position: fixed;
+  right: 0;
+  top: 0;
+  visibility: visible;
+  z-index: 9;
+  height: 50vh;
+  background-color: gray;
+  border-radius: 10px;
+}
+.modal-box img {
+  width: 100%;
+  height: 60vh;
+  border-radius: 10px 10px 0 0;
+}
+.details {
+  line-height: 0.7;
+  margin-left: 40px;
 }
